@@ -1,3 +1,4 @@
+Build a Fraction: Shapes: Made internal divisions (dotted lines) go back to 1 when going into toolbox
 Build a Fraction: Shapes: For levels 8-10, made number of containers go back to 1 when going into toolbox
 Build a Fraction: Shapes: Made it so the dotted lines don't get in the way of mouse events
 # 1.00.22 (66770) Aug 9, 2012
